started AE in neural_ts_modelling

--- a/neural_ts_modelling.ipynb
+++ b/neural_ts_modelling.ipynb
@@ -14,7 +14,7 @@
     "- Second data split: Network optimization (neural_networks/training.py)\n",
     "- Third data split: Evaluation\n",
     "\n",
-    "## Setting up your working space\n",
+    "## Set up your working space\n",
     "\n",
     "Depending on the data you use, you might need to do your computations on a high performance cluster (HPC). Instructions for accessing the bwUniCluster follow.\n",
     "This tutorial, however you will be able to pursue on your own computer.\n",
@@ -25,7 +25,7 @@
     "\n",
     "Install the necessary packages: torch, torchvision.\n",
     "\n",
-    "## TS modelling with an MLP\n",
+    "## Supervised Learning: TS modelling with an MLP\n",
     "\n",
     "The MLP does not have an internal structure that accounts for the temporal dependencies in the data. Yet, for uncomplicated temporal dependencies we can structure the data such that it does.\n",
     "We do this by modelling the target variable as follows (here simplified, not accounting for layers or activation functions):\n",
@@ -43,16 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "outputs": [],
    "source": [
-    "import utils\n",
+    "import neural_networks.utils as utils\n",
     "import matplotlib.pyplot as plt\n",
     "import neural_networks.preprocessing as preprocessing\n",
     "import neural_networks.random_search as random_search\n",
     "import torch\n",
     "import numpy as np\n",
-    "import models"
+    "import neural_networks.models_nn as models"
    ],
    "metadata": {
     "collapsed": false,
@@ -77,8 +77,7 @@
     }
    ],
    "source": [
-    "dfs = preprocessing.get_gpp()\n",
-    "dfs.dtype"
+    "dfs = preprocessing.get_gpp()"
    ],
    "metadata": {
     "collapsed": false,
@@ -89,15 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Current shape of data: (7674,)\n",
-      "New shape of data: (7674, 1)\n",
-      "Input dimension: 1 Output dimension: 1\n"
+      "New shape of data: (7674, 1)\n"
      ]
     }
    ],
@@ -105,10 +103,7 @@
     "x = dfs['GPP_ref'].values#torch.tensor(dfs['GPP_ref'].values)\n",
     "print(\"Current shape of data:\", x.shape)\n",
     "xs = x.reshape(-1, 1)\n",
-    "print(\"New shape of data:\", xs.shape)\n",
-    "input_dim = xs.shape[1]\n",
-    "output_dim = xs.shape[1]\n",
-    "print(\"Input dimension:\", input_dim, \"Output dimension:\", output_dim)"
+    "print(\"New shape of data:\", xs.shape)"
    ],
    "metadata": {
     "collapsed": false,
@@ -131,39 +126,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3, 1529, 1) (1529, 1)\n"
+      "Input dimension: 3 Output dimension: 1\n"
      ]
     }
    ],
    "source": [
-    "def split(x, n = 5):\n",
-    "    out = np.array_split(x, n)\n",
-    "    x_nas = out[0]\n",
-    "    x_train = np.concatenate(out[1:(len(out)-2)])\n",
-    "    x_test = out[len(out)-1]\n",
-    "    return x_nas, x_train, x_test\n",
-    "\n",
-    "def make_history(x, history):\n",
-    "\n",
-    "    x = x[history:]\n",
-    "    y = x[history:]\n",
-    "\n",
-    "    xh = []\n",
-    "    for i in range(history):\n",
-    "        xh.append(x[i:-(history-i)])\n",
-    "\n",
-    "    return np.array(xh), y\n",
-    "\n",
-    "x_nas, x_train, x_test = split(xs)\n",
+    "x_nas, x_train, x_test = utils.split(xs)\n",
     "# see what happens to the data when we attach history\n",
-    "x_nas, y_nas = make_history(x_nas, history=3)\n",
-    "print(x_nas.shape, y_nas.shape)"
+    "# better: move history as hyperparameter into NAS\n",
+    "x_nas, y_nas = utils.make_history(x_nas, history=3)\n",
+    "x_nas = np.transpose(np.squeeze(x_nas, axis=2))\n",
+    "input_dim = x_nas.shape[1]\n",
+    "output_dim = y_nas.shape[1]\n",
+    "print(\"Input dimension:\", input_dim, \"Output dimension:\", output_dim)"
    ],
    "metadata": {
     "collapsed": false,
@@ -186,19 +167,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 4, 4, 4, 1], [1, 8, 1], [1, 32, 32, 16, 1], [1, 16, 32, 1], [1, 16, 8, 1], [1, 4, 16, 16, 1], [1, 32, 1], [1, 4, 1], [1, 32, 8, 1], [1, 4, 4, 1], [1, 8, 4, 1], [1, 32, 16, 8, 1], [1, 8, 16, 8, 1], [1, 8, 4, 16, 1], [1, 16, 16, 32, 1], [1, 8, 32, 1], [1, 4, 32, 1], [1, 8, 8, 4, 1], [1, 16, 1], [1, 16, 16, 16, 1]]\n"
+      "[[3, 8, 32, 1], [3, 32, 8, 1], [3, 8, 16, 1], [3, 4, 16, 8, 1], [3, 4, 1], [3, 8, 8, 1], [3, 16, 16, 1], [3, 16, 4, 4, 1], [3, 32, 1], [3, 16, 8, 1], [3, 16, 16, 4, 1], [3, 16, 8, 16, 1], [3, 4, 4, 16, 1], [3, 16, 32, 8, 1], [3, 32, 16, 1], [3, 16, 8, 32, 1], [3, 4, 16, 16, 1], [3, 32, 32, 1], [3, 32, 4, 8, 1], [3, 32, 4, 4, 1], [3, 32, 4, 1], [3, 8, 4, 1], [3, 4, 16, 32, 1], [3, 32, 4, 32, 1], [3, 8, 1]]\n",
+      "fitted model 0\n",
+      "fitted model 1\n",
+      "fitted model 2\n",
+      "fitted model 3\n",
+      "fitted model 4\n",
+      "fitted model 5\n",
+      "fitted model 6\n",
+      "fitted model 7\n",
+      "fitted model 8\n",
+      "fitted model 9\n",
+      "fitted model 10\n",
+      "fitted model 11\n",
+      "fitted model 12\n",
+      "fitted model 13\n",
+      "fitted model 14\n",
+      "fitted model 15\n",
+      "fitted model 16\n",
+      "fitted model 17\n",
+      "fitted model 18\n",
+      "fitted model 19\n",
+      "fitted model 20\n",
+      "fitted model 21\n",
+      "fitted model 22\n",
+      "fitted model 23\n",
+      "fitted model 24\n",
+      "Random architecture search best result:\n",
+      "    0   1   2    3   4  mae_train   mae_val\n",
+      "17  3  32  32  1.0 NaN   3.048603  2.925999\n"
      ]
     }
    ],
    "source": [
     "AS_grid = random_search.architecture_searchspace(input_dim, output_dim, gridsize = 30)\n",
-    "print(AS_grid)"
+    "print(AS_grid)\n",
+    "\n",
+    "x_nas, y_nas = torch.Tensor(x_nas), torch.Tensor(y_nas)\n",
+    "AS_results = random_search.architecture_search(x_nas, y_nas, AS_grid)"
    ],
    "metadata": {
     "collapsed": false,
@@ -209,9 +221,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    0   1   2     3    4  mae_train   mae_val\n",
+      "0   3   8  32   1.0  NaN   3.066226  2.961246\n",
+      "1   3  32   8   1.0  NaN   3.087801  2.978560\n",
+      "2   3   8  16   1.0  NaN   3.064722  2.953107\n",
+      "3   3   4  16   8.0  1.0   3.072922  2.967999\n",
+      "4   3   4   1   NaN  NaN   3.026378  2.958511\n",
+      "5   3   8   8   1.0  NaN   3.023111  2.967925\n",
+      "6   3  16  16   1.0  NaN   3.121395  3.007373\n",
+      "7   3  16   4   4.0  1.0   3.077248  2.962615\n",
+      "8   3  32   1   NaN  NaN   3.115907  2.996902\n",
+      "9   3  16   8   1.0  NaN   3.097649  2.976712\n",
+      "10  3  16  16   4.0  1.0   3.066667  2.954743\n",
+      "11  3  16   8  16.0  1.0   3.078778  2.968441\n",
+      "12  3   4   4  16.0  1.0   3.080419  2.972447\n",
+      "13  3  16  32   8.0  1.0   3.067036  2.969101\n",
+      "14  3  32  16   1.0  NaN   3.048464  2.949687\n",
+      "15  3  16   8  32.0  1.0   3.094335  2.989649\n",
+      "16  3   4  16  16.0  1.0   3.093214  2.984083\n",
+      "17  3  32  32   1.0  NaN   3.048603  2.925999\n",
+      "18  3  32   4   8.0  1.0   3.082228  2.980810\n",
+      "19  3  32   4   4.0  1.0   3.065858  2.959815\n",
+      "20  3  32   4   1.0  NaN   3.123054  2.999072\n",
+      "21  3   8   4   1.0  NaN   3.061298  2.956827\n",
+      "22  3   4  16  32.0  1.0   3.076675  2.962851\n",
+      "23  3  32   4  32.0  1.0   3.082777  2.975720\n",
+      "24  3   8   1   NaN  NaN   3.047139  3.013593\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(AS_results)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Unsupervised learning: Timeseries modelling with the Auto-Encoder\n",
+    "\n",
+    "From a simple Auto-Encoder, we expect our output to be the same as the input with reduced noise. This is realized with a bottleneck in the network architecture that allows only the most useful information to get through. The smaller the bottleneck, the lower the risk of overfitting - but too small might prevent important information to flow through.\n",
+    "\n",
+    "Building blocks of an Auto-Encoder\n",
+    "- Encoder: Set of convolutional and pooling blocks.\n",
+    "- Bottleneck: The compressed representation of the input.\n",
+    "- Decoder: Upsampling and convolutional blocks.\n",
+    "\n",
+    "The most important hyperparameters\n",
+    "- size of the bottleneck\n",
+    "- depth of the encoder and the decoder\n",
+    "- nodes per layer\n",
+    "- reconstruction loss\n",
+    "\n",
+    "Types of Auto-Encoders (https://www.v7labs.com/blog/autoencoders-guide)\n",
+    "- Undercomplete: Unsupervised. Form of non-linear dimensionality reduction. Input is the same as output.\n",
+    "- Sparse: Regularized through an sparsity term in the loss function.\n",
+    "- Denoising: Input is a corrupted (noisy) version of the true data.\n",
+    "- Variational: Probabilistic representation of the latent space. Generational models."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# Currently no architecture search for AE possible.\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
