--- a/Population_dynamics.ipynb
+++ b/Population_dynamics.ipynb
@@ -77,7 +77,8 @@
     "                           ensemble_size=30,\n",
     "                           initial_size=20)\n",
     "sims.simulation_parameters(regime=\"non-chaotic\", behaviour=\"stochastic\")\n",
-    "sims.choose_model(\"single-species\", \"exogeneous\")\n",
+    "sims.environment('exogeneous', trend=False)\n",
+    "sims.model_type(\"single-species\")\n",
     "x = sims.simulate()\n",
     "x_base = x.copy()"
    ],
