--- a/Population_dynamics.ipynb
+++ b/Population_dynamics.ipynb
@@ -252,7 +252,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "An empirical cumulativ distributions functions orders the values and assigns probabilities. It's usually estimated with some kernel density estimator. In python, we can fit the function ecdf in the statsmodel package to get the ecdf of our data. It displays the probability that a random variable $X$ will take a values less or equal to x.\n",
+    "An empirical cumulative distributions functions orders the values and assigns probabilities. It's usually estimated with some kernel density estimator. In python, we can fit the function ecdf in the statsmodel package to get the ecdf of our data. It displays the probability that a random variable $X$ will take a values less or equal to x.\n",
     "$F_X(x) = P(X \\leq x)$."
    ],
    "metadata": {
