--- a/signal_noise_ratio.ipynb
+++ b/signal_noise_ratio.ipynb
@@ -66,14 +66,13 @@
    ],
    "source": [
     "# create simulator object\n",
-    "sims = simulations.Simulator()\n",
+    "sims = simulations.Simulator(model_type=\"single-species\",\n",
+    "                             simulation_regime=\"non-chaotic\",\n",
+    "                             environment=\"non-exogeneous\")\n",
     "# Set hyperparameters. We'll simulate on a weekly resolution. Years is changed to weeks.\n",
     "sims.hyper_parameters(simulated_years=5,\n",
     "                           ensemble_size=5,\n",
     "                           initial_size=950)\n",
-    "sims.simulation_parameters(regime=\"non-chaotic\", behaviour=\"stochastic\")\n",
-    "sims.environment('non-exogeneous', trend=False)\n",
-    "sims.model_type(\"single-species\")\n",
     "x_mod = sims.simulate()"
    ],
    "metadata": {
