--- a/Population_dynamics.ipynb
+++ b/Population_dynamics.ipynb
@@ -73,14 +73,13 @@
    ],
    "source": [
     "# create simulator object\n",
-    "sims = simulations.Simulator()\n",
+    "sims = simulations.Simulator(model_type=\"single-species\",\n",
+    "                             simulation_regime=\"non-chaotic\",\n",
+    "                             environment=\"exogeneous\")\n",
     "# Set hyperparameters. We'll simulate on a weekly resolution. Years is changed to weeks.\n",
     "sims.hyper_parameters(simulated_years=2,\n",
     "                           ensemble_size=30,\n",
     "                           initial_size=20)\n",
-    "sims.simulation_parameters(regime=\"non-chaotic\", behaviour=\"stochastic\")\n",
-    "sims.environment('exogeneous', trend=False)\n",
-    "sims.model_type(\"single-species\")\n",
     "x = sims.simulate()\n",
     "x_base = x.copy()"
    ],
