--- a/skillscore_metrics.ipynb
+++ b/skillscore_metrics.ipynb
@@ -1,26 +1,22 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# The xskillscore package to evaluate forecasts"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n"
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import xskillscore as xs\n",
@@ -28,7 +24,13 @@
     "import simulations\n",
     "import matplotlib.pyplot as plt\n",
     "import xarray as xr"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -74,24 +76,22 @@
    ],
    "source": [
     "# Verification data\n",
-    "sims = simulations.Simulator()\n",
+    "sims = simulations.Simulator(model_type=\"multi-species\",\n",
+    "                             simulation_regime=\"non-chaotic\",\n",
+    "                             environment=\"non-exogeneous\")\n",
     "sims.hyper_parameters(simulated_years=5,\n",
     "                           ensemble_size=1,\n",
     "                           initial_size=(950, 950))\n",
-    "sims.simulation_parameters(regime=\"non-chaotic\", behaviour=\"stochastic\")\n",
-    "sims.environment('non-exogeneous', trend=False)\n",
-    "sims.model_type(\"multi-species\")\n",
     "x_true = sims.simulate()\n",
     "x_obs = x_true[:,:,0]\n",
     "\n",
     "# Forecast\n",
-    "sims = simulations.Simulator()\n",
+    "sims = simulations.Simulator(model_type=\"single-species\",\n",
+    "                             simulation_regime=\"non-chaotic\",\n",
+    "                             environment=\"non-exogeneous\")\n",
     "sims.hyper_parameters(simulated_years=5,\n",
     "                           ensemble_size=10,\n",
     "                           initial_size=950)\n",
-    "sims.simulation_parameters(regime=\"non-chaotic\", behaviour=\"stochastic\")\n",
-    "sims.environment('non-exogeneous', trend=False)\n",
-    "sims.model_type(\"single-species\")\n",
     "x_mod = sims.simulate()\n",
     "\n",
     "print(x_mod[0,:].reshape(1,x_mod.shape[1]).shape, x_obs.shape)"
