--- a/Population_dynamics.ipynb
+++ b/Population_dynamics.ipynb
@@ -320,7 +320,7 @@
    "source": [
     "# Structured sampling\n",
     "\n",
-    "## Group-specific parameters with homogeneous variance."
+    "## Group-specific parameters with homogeneous process error."
    ],
    "metadata": {
     "collapsed": false,
@@ -360,17 +360,7 @@
     }
    ],
    "source": [
-    "# Let's do the same simulation but with structured sampling: We sample multiple populations with slightly different true parameter values.\n",
-    "x = np.array(sims.simulate(structured_samples=5))\n",
-    "print(x.shape)\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot()\n",
-    "for i in range(x.shape[0]):\n",
-    "    plt.plot(np.transpose(x[i,:,:]))\n",
-    "ax.set_xlabel('Time step t', size=14)\n",
-    "ax.set_ylabel('Population size', size=14)\n",
-    "fig.show()"
+    "# Let's do the same simulation but with structured sampling: We sample multiple populations with slightly different true parameter values.\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -382,7 +372,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Group-specific parameters with heterogeneous variance."
+    "## Group-specific parameters with heterogeneous process error."
    ],
    "metadata": {
     "collapsed": false,
@@ -394,7 +384,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "What variance exactly is heterogeneous here?\n"
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -750,7 +740,6 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import utils\n",
-    "\n",
     "\n",
     "\n",
     "def lambda_x(t):\n",
