added process error

--- a/Seltop_Basar.ipynb
+++ b/Seltop_Basar.ipynb
@@ -184,7 +184,7 @@
     "                           initial_size=950)\n",
     "xsim = sims.simulate()\n",
     "mod = sims.ricker\n",
-    "xsim_derivative = mod.derive_model()"
+    "xsim_derivative = mod.derive(xsim)"
    ],
    "metadata": {
     "collapsed": false,
