--- a/notebooks/entropy_based_predictability.ipynb
+++ b/notebooks/entropy_based_predictability.ipynb
@@ -29,13 +29,15 @@
    "execution_count": 131,
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../Ricker')\n",
+    "\n",
     "import numpy as np\n",
     "import simulations\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.stats as ss\n",
     "from collections import Counter\n",
     "from math import factorial,sqrt\n",
-    "from proficiency_metrics import rmse\n",
     "import json\n"
    ],
    "metadata": {
