--- a/notebooks/neural_ts_modelling.ipynb
+++ b/notebooks/neural_ts_modelling.ipynb
@@ -46,6 +46,9 @@
    "execution_count": 1,
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../Ricker')\n",
+    "\n",
     "import neural_networks.utils as utils\n",
     "import matplotlib.pyplot as plt\n",
     "import neural_networks.preprocessing as preprocessing\n",
