--- a/notebooks/Population_dynamics.ipynb
+++ b/notebooks/Population_dynamics.ipynb
@@ -30,6 +30,9 @@
    "execution_count": 11,
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../Ricker')\n",
+    "\n",
     "import simulations\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
