--- a/notebooks/signal_noise_ratio.ipynb
+++ b/notebooks/signal_noise_ratio.ipynb
@@ -23,6 +23,9 @@
    },
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../Ricker')\n",
+    "\n",
     "import numpy as np\n",
     "import simulations\n",
     "import matplotlib.pyplot as plt\n",
